fix for fdo#37323: Correct autofilter import from ODS.

Signed-off-by: Kohei Yoshida <kyoshida@novell.com>
Signed-off-by: Petr Mladek <pmladek@suse.cz>
Signed-off-by: Michael Meeks <michael.meeks@novell.com>